# ZenS

./: .gitignore  CMakeLists.txt  Data Upload  README.md  shmdata.h
Bracelet Main/: Bracelet Main.ino  CMakeLists.txt  Controler.cpp  Controler.h  Device.cpp  Device.h  Gest_Data.cpp  Gest_Data.h  Gest_Quantity_Data.h  Gesture.h  Order.cpp  Setting.h
Bracelet_Main/: Bracelet_Main.ino  Controler.cpp  Controler.h  Device.cpp  Device.h  Gest_Data.cpp  Gest_Data.h  Gest_Quantity_Data.cpp  Gest_Quantity_Data.h  Gesture.cpp  Gesture.h  Order.cpp  Order.h  Setting.h
Bracelet_Main/in_SD/: AC.txt
Gesture_Detect_Debug/: Gesture_Detect_Debug.ino
Gesture_Detect_Debug/read_process/: read_process.ino
Gesture_Detect_Debug/read_store/: read_store.ino
Gesture_Detect_Debug/train_class/: train_class.ino
IRrecord/: IRrecord.ino
IRsend/: IRsend.ino
Marc_temp/: Cpp_send.cpp  Data Upload  Python_receive.py  Receive_C  Send_C
Model_Physics/: 物理模型.3dm
Model_Physics/parameters/: 可穿戴开发板方案.docx
Schematic/: ZenS.fzz
Schematic/Microcontroller/: ATmega2560_Library.SchLib  Atmel Microcontroller megaAVR.rar
Solution/: 元件表.xlsx  创新点挖掘.docx  可穿戴开发板方案.docx  手势设计方案.docx  手势识别方案.docx  手环开机方案.docx  手环物理模型方案.docx  技术高级化方案.docx  红外发射方案.docx
Test_Data/: 上位机调试 .xlsx  单片机调试 .xlsx
